Fix alignment with long billing text.

--- a/client/jetpack-cloud/sections/comparison/table/style.scss
+++ b/client/jetpack-cloud/sections/comparison/table/style.scss
@@ -42,9 +42,9 @@
 				&:not(.is-placeholder) {
 					.display-price__details,
 					.display-price__billing-time-frame {
+						display: block;
 						line-height: 0.5;
 						white-space: normal;
-						margin-top: 0;
 					}
 
 					.display-price__prices {
